# msgpack-mqtt-cli

./: .gitignore  CMakeLists.txt  README.md  extra.py  platformio.ini
src/: json2msgpack.cpp  main.cpp  msgpack2json.cpp
